--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "classnames": "^2.3.2",
     "json-server": "^0.17.4",
     "next": "14.0.1",
     "react": "^18",
