--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "classnames": "^2.3.2",
     "json-server": "^0.17.4",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.47.0"
+    "react-hook-form": "^7.47.0",
+    "saas": "^1.0.0"
   }
 }
